Admin starts to get together

--- a/example-site/index.html
+++ b/example-site/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>tristo mietitore</title>
+    <title>scythe-server</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -24,8 +24,8 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">tristo mietitore</h1>
-            <p class="lead">For more info please visit <a href="https://github.com/scythe-suite/tristo-mietitore">tristo mietitore repository</a>.</p>
+            <h1 class="cover-heading">scythe-server</h1>
+            <p class="lead">For more info please visit <a href="https://github.com/scythe-suite/scythe-server">scythe-server repository</a>.</p>
           </div>
 
         </div>
