--- a/docker/viewer/html/index.html
+++ b/docker/viewer/html/index.html
@@ -53,7 +53,7 @@
 
 <script type="text/x-template" id="details-template">
   <b-tabs card>
-    <b-tab title="Sources" active>
+    <b-tab :disabled='solutions.length == 0' title="Sources" active>
         <b-card v-for="solution in solutions" :header="solution.name" :key="solution.name">
             <pre class="card-text"><code v-html='solution.highlighted'></code></pre>
         </b-card>
@@ -61,7 +61,7 @@
             <pre class="card-text">{{details.compilation}}</pre>
         </b-card>
     </b-tab>
-    <b-tab :disabled='!hasIssues' title="Issues">
+    <b-tab :disabled='issues.length == 0' title="Issues">
         <b-card v-for="issue in issues" :header="issue.name" :key="issue.name" :header-bg-variant="issue.errors ? 'danger' : 'warning'">
             <pre v-if='issue.errors' class="card-text">{{issue.errors}}</pre>
             <div v-if='issue.diffs'>
@@ -73,12 +73,12 @@
             </div>
         </b-card>
     </b-tab>
-    <b-tab title="Texts">
+    <b-tab :disabled='texts.length == 0' title="Texts">
         <b-card v-for="text in texts" :header="text.name" :key="text.name">
             <div v-html='text.marked' class="card-text"></div>
         </b-card>
     </b-tab>
-    <b-tab title="Cases">
+    <b-tab :disabled='caseNames.length == 0' title="Cases">
         <b-card v-for="name in caseNames" :header="name" :key="name">
           <b-card-group deck>
             <b-card v-if='cases[name].input' header="Input"><pre class="card-text">{{cases[name].input}}</pre></b-card>
