--- a/docker/viewer/html/index.html
+++ b/docker/viewer/html/index.html
@@ -29,7 +29,7 @@
 <script type="text/x-template" id="navbar-template">
 <b-navbar toggleable="md" type="dark" variant="info">
   <b-navbar-brand href="#">Scythe Viewer</b-navbar-brand>
-    <b-nav is-nav-bar>
+    <b-nav v-if='store.session.auth' is-nav-bar>
       <b-nav-item href="#" @click='click' :disabled='summary'>Summary</b-nav-item>
       <b-nav-text><icon :name='lock'></icon></b-nav-text>
     </b-nav>
