--- a/docker/viewer/html/index.html
+++ b/docker/viewer/html/index.html
@@ -29,8 +29,8 @@
 <script type="text/x-template" id="navbar-template">
 <b-navbar toggleable="md" type="dark" variant="info">
   <b-navbar-brand href="#">Scythe Viewer</b-navbar-brand>
-    <b-nav v-if='store.session.auth' is-nav-bar>
-      <b-nav-item href="#" @click='click' :disabled='summary'>Summary</b-nav-item>
+    <b-nav is-nav-bar>
+      <b-nav-item v-if='store.session.auth' href="#" @click='click' :disabled='summary'>Summary</b-nav-item>
       <b-nav-text><icon :name='lock'></icon></b-nav-text>
     </b-nav>
     <b-nav is-nav-bar class="ml-auto"><b-nav-form>
