--- a/docker/viewer/html/index.html
+++ b/docker/viewer/html/index.html
@@ -15,6 +15,7 @@
   <script src="//unpkg.com/axios@latest/dist/axios.min.js"></script>
   <script src="//unpkg.com/marked@latest"></script>
   <script src="//unpkg.com/vue-awesome@latest/dist/vue-awesome.js"></script>
+  <script src="//unpkg.com/vue-timeago@3.4.0/dist/vue-timeago.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
 </head>
@@ -48,7 +49,11 @@
 </script>
 
 <script type="text/x-template" id="summary-template">
-  <b-table @row-clicked='click' small fixed striped :items='items' :fields='fields' :sortCompare='customSort'></b-table>
+  <b-table @row-clicked='click' small fixed striped :items='items' :fields='fields' :sortCompare='customSort'>
+    <template slot="timestamp" slot-scope="data">
+        <timeago :since='parseInt(data.item.timestamp)'></timeago>
+    </template>
+  </b-table>
 </script>
 
 <script type="text/x-template" id="details-template">
